--- a/.gitignore
+++ b/.gitignore
@@ -653,3 +653,10 @@ TSWLatexianTemp*
 #*Notes.bib
 
 output.txt
+
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+
+# IPython
+profile_default/
+ipython_config.py
